--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -581,6 +581,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
                          */
                         if (vcpu->arch.nmi_pending)
                                 kvm_x86_ops.enable_nmi_window(vcpu);
+                        // 收集中断, 判断时候是否有
                         if (kvm_cpu_has_injectable_intr(vcpu) || req_int_win)
                                 kvm_x86_ops.enable_irq_window(vcpu);
                         WARN_ON(vcpu->arch.exception.pending);
@@ -595,4 +596,119 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 即在**进入非根模式之前**会检查`KVM_REQ_EVENT`事件，如果**存在pending的事件**，则调用`kvm_apic_accept_events`**接收**，这里主要是处理**APIC初始化期间**和**IPI中断**的，暂且不关注。
 
-之后会调用`inject_pending_event`，在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr,vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用kvm_queue_interrupt，把中断记录到vcpu中。
+之后会调用`inject_pending_event`，在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr,vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
+
+```cpp
+static int inject_pending_event(struct kvm_vcpu *vcpu)
+{
+        int r;
+
+        /* try to reinject previous events if any */
+
+        if (vcpu->arch.exception.injected)
+                kvm_x86_ops.queue_exception(vcpu);
+        /*
+         * Do not inject an NMI or interrupt if there is a pending
+         * exception.  Exceptions and interrupts are recognized at
+         * instruction boundaries, i.e. the start of an instruction.
+         * Trap-like exceptions, e.g. #DB, have higher priority than
+         * NMIs and interrupts, i.e. traps are recognized before an
+         * NMI/interrupt that's pending on the same instruction.
+         * Fault-like exceptions, e.g. #GP and #PF, are the lowest
+         * priority, but are only generated (pended) during instruction
+         * execution, i.e. a pending fault-like exception means the
+         * fault occurred on the *previous* instruction and must be
+         * serviced prior to recognizing any new events in order to
+         * fully complete the previous instruction.
+         */
+        else if (!vcpu->arch.exception.pending) {
+                if (vcpu->arch.nmi_injected)
+                        kvm_x86_ops.set_nmi(vcpu);
+                else if (vcpu->arch.interrupt.injected)
+                        kvm_x86_ops.set_irq(vcpu);
+        }
+
+        /*
+         * Call check_nested_events() even if we reinjected a previous event
+         * in order for caller to determine if it should require immediate-exit
+         * from L2 to L1 due to pending L1 events which require exit
+         * from L2 to L1.
+         */
+        if (is_guest_mode(vcpu) && kvm_x86_ops.check_nested_events) {
+                r = kvm_x86_ops.check_nested_events(vcpu);
+                if (r != 0)
+                        return r;
+        }
+
+        /* try to inject new event if pending */
+        if (vcpu->arch.exception.pending) {
+                trace_kvm_inj_exception(vcpu->arch.exception.nr,
+                                        vcpu->arch.exception.has_error_code,
+                                        vcpu->arch.exception.error_code);
+
+                WARN_ON_ONCE(vcpu->arch.exception.injected);
+                vcpu->arch.exception.pending = false;
+                vcpu->arch.exception.injected = true;
+
+                if (exception_type(vcpu->arch.exception.nr) == EXCPT_FAULT)
+                        __kvm_set_rflags(vcpu, kvm_get_rflags(vcpu) |
+                                             X86_EFLAGS_RF);
+
+                if (vcpu->arch.exception.nr == DB_VECTOR) {
+                        /*
+                         * This code assumes that nSVM doesn't use
+                         * check_nested_events(). If it does, the
+                         * DR6/DR7 changes should happen before L1
+                         * gets a #VMEXIT for an intercepted #DB in
+                         * L2.  (Under VMX, on the other hand, the
+                         * DR6/DR7 changes should not happen in the
+                         * event of a VM-exit to L1 for an intercepted
+                         * #DB in L2.)
+                         */
+                        kvm_deliver_exception_payload(vcpu);
+                        if (vcpu->arch.dr7 & DR7_GD) {
+                                vcpu->arch.dr7 &= ~DR7_GD;
+                                kvm_update_dr7(vcpu);
+                        }
+                }
+
+                kvm_x86_ops.queue_exception(vcpu);
+        }
+
+        /* Don't consider new event if we re-injected an event */
+        if (kvm_event_needs_reinjection(vcpu))
+                return 0;
+
+        if (vcpu->arch.smi_pending && !is_smm(vcpu) &&
+            kvm_x86_ops.smi_allowed(vcpu)) {
+                vcpu->arch.smi_pending = false;
+                ++vcpu->arch.smi_count;
+                enter_smm(vcpu);
+        } else if (vcpu->arch.nmi_pending && kvm_x86_ops.nmi_allowed(vcpu)) {
+                --vcpu->arch.nmi_pending;
+                vcpu->arch.nmi_injected = true;
+                kvm_x86_ops.set_nmi(vcpu);
+        } else if (kvm_cpu_has_injectable_intr(vcpu)) {
+                /*
+                 * Because interrupts can be injected asynchronously, we are
+                 * calling check_nested_events again here to avoid a race condition.
+                 * See https://lkml.org/lkml/2014/7/2/60 for discussion about this
+                 * proposal and current concerns.  Perhaps we should be setting
+                 * KVM_REQ_EVENT only on certain events and not unconditionally?
+                 */
+                if (is_guest_mode(vcpu) && kvm_x86_ops.check_nested_events) {
+                        r = kvm_x86_ops.check_nested_events(vcpu);
+                        if (r != 0)
+                                return r;
+                }
+                if (kvm_x86_ops.interrupt_allowed(vcpu)) {
+                        kvm_queue_interrupt(vcpu, kvm_cpu_get_interrupt(vcpu),
+                                            false);
+                        kvm_x86_ops.set_irq(vcpu);
+                }
+        }
+
+        return 0;
+}
+```
+
