--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -581,7 +581,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
                          */
                         if (vcpu->arch.nmi_pending)
                                 kvm_x86_ops.enable_nmi_window(vcpu);
-                        // 收集中断, 判断时候是否有
+                        // 收集中断
                         if (kvm_cpu_has_injectable_intr(vcpu) || req_int_win)
                                 kvm_x86_ops.enable_irq_window(vcpu);
                         WARN_ON(vcpu->arch.exception.pending);
@@ -596,7 +596,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 即在**进入非根模式之前**会检查`KVM_REQ_EVENT`事件，如果**存在pending的事件**，则调用`kvm_apic_accept_events`**接收**，这里主要是处理**APIC初始化期间**和**IPI中断**的，暂且不关注。
 
-之后会调用`inject_pending_event`，在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr,vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
+之后会调用`inject_pending_event`，在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
 
 ```cpp
 static int inject_pending_event(struct kvm_vcpu *vcpu)
@@ -702,8 +702,10 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
                                 return r;
                 }
                 if (kvm_x86_ops.interrupt_allowed(vcpu)) {
+                        // 将中断记录到vcpu中
                         kvm_queue_interrupt(vcpu, kvm_cpu_get_interrupt(vcpu),
                                             false);
+                        // 写入vmcs结构中
                         kvm_x86_ops.set_irq(vcpu);
                 }
         }
@@ -711,4 +713,69 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
         return 0;
 }
 ```
+
+```cpp
+static inline void kvm_queue_interrupt(struct kvm_vcpu *vcpu, u8 vector,
+    bool soft)
+{
+    vcpu->arch.interrupt.pending = true;
+    vcpu->arch.interrupt.soft = soft;
+    vcpu->arch.interrupt.nr = vector;
+}
+```
+
+最后会调用`kvm_x86_ops->set_irq`，进行中断注入的最后一步，即写入到vmcs结构中。该函数指针指向`vmx_inject_irq`
+
+```cpp
+static void vmx_inject_irq(struct kvm_vcpu *vcpu)
+{
+        struct vcpu_vmx *vmx = to_vmx(vcpu);
+        uint32_t intr;
+        //中断号
+        int irq = vcpu->arch.interrupt.nr;
+
+        trace_kvm_inj_virq(irq);
+
+        ++vcpu->stat.irq_injections;
+        if (vmx->rmode.vm86_active) {
+                int inc_eip = 0;
+                if (vcpu->arch.interrupt.soft)
+                        inc_eip = vcpu->arch.event_exit_inst_len;
+                kvm_inject_realmode_interrupt(vcpu, irq, inc_eip);
+                return;
+        }
+        // 设置有中断向量的有效性
+        intr = irq | INTR_INFO_VALID_MASK;
+        // 如果是软件中断
+        if (vcpu->arch.interrupt.soft) {
+                // 内部中断
+                intr |= INTR_TYPE_SOFT_INTR;
+                // 软件中断需要写入指令长度
+                vmcs_write32(VM_ENTRY_INSTRUCTION_LEN,
+                             vmx->vcpu.arch.event_exit_inst_len);
+        } else
+                // 标记为外部中断
+                intr |= INTR_TYPE_EXT_INTR;
+        // 写入vmxs的VM_ENTRY_INTR_INFO_FIELD中
+        vmcs_write32(VM_ENTRY_INTR_INFO_FIELD, intr);
+
+        vmx_clear_hlt(vcpu);
+}
+```
+
+最终会写入到vmcs的VM_ENTRY_INTR_INFO_FIELD中，这需要按照一定的格式。具体格式详见intel手册。0-7位是向量号，8-10位是中断类型（硬件中断或者软件中断），最高位是有效位，12位是NMI标志。
+
+```cpp
+// arch/x86/include/asm/vmx.h
+/*
+ * Interruption-information format
+ */
+#define INTR_INFO_VECTOR_MASK           0xff            /* 7:0 */
+#define INTR_INFO_INTR_TYPE_MASK        0x700           /* 10:8 */
+#define INTR_INFO_DELIVER_CODE_MASK     0x800           /* 11 */
+#define INTR_INFO_UNBLOCK_NMI           0x1000          /* 12 */
+#define INTR_INFO_VALID_MASK            0x80000000      /* 31 */
+```
+
+## 中断路由表的初始化
 
