--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -8,7 +8,7 @@
 - [3. /dev/kvm的ioctl接口kvm_dev_ioctl](#3-devkvm的ioctl接口kvm_dev_ioctl)
 - [4. 虚拟机的创建](#4-虚拟机的创建)
   - [4.1. 基本原理](#41-基本原理)
-  - [4.2. 基本流程](#42-基本流程)
+  - [4.2. 整体流程](#42-整体流程)
   - [4.3. 代码分析](#43-代码分析)
     - [4.3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#431-虚拟机创建过程kvm_dev_ioctl_create_vm)
       - [4.3.1.1. kvm_create_vm流程](#4311-kvm_create_vm流程)
@@ -16,7 +16,7 @@
 - [5. 虚拟机fd的ioctl接口kvm_vm_ioctl](#5-虚拟机fd的ioctl接口kvm_vm_ioctl)
 - [6. vCPU的创建](#6-vcpu的创建)
   - [6.1. 基本原理](#61-基本原理)
-  - [6.2. 基本流程](#62-基本流程)
+  - [6.2. 整体流程](#62-整体流程)
   - [6.3. 代码分析](#63-代码分析)
     - [6.3.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#631-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
       - [6.3.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#6311-kvm_arch_vcpu_create创建kvm_vcpu)
@@ -26,7 +26,7 @@
       - [6.3.1.5. 释放内核锁和返回vcpu_fd](#6315-释放内核锁和返回vcpu_fd)
 - [7. vCPU的运行](#7-vcpu的运行)
   - [7.1. 基本原理](#71-基本原理)
-  - [7.2. 基本流程](#72-基本流程)
+  - [7.2. 整体流程](#72-整体流程)
   - [7.3. 代码分析](#73-代码分析)
 
 <!-- /code_chunk_output -->
@@ -129,7 +129,7 @@ out:
 
 对`虚拟机(VM)`来说，**kvm结构体**是关键，**一个虚拟机**对应**一个kvm结构体**，虚拟机的创建过程实质为**kvm结构体的创建**和**初始化过程**。
 
-## 4.2. 基本流程
+## 4.2. 整体流程
 
 整体流程如下:
 
@@ -339,7 +339,7 @@ static long kvm_vm_ioctl(struct file *filp,
 
 在获得了**fd\_vm**之后，通过**ioctl**调用**KVM\_CREATE\_VCPU指令**，可以对该fd\_vm对应的虚拟机**创建vCPU**，其入口函数地址在**kvm\_vm\_ioctl**函数(virt/kvm/kvm\_main.c)中，通过`switch`之后，程序流程将选择进入**kvm\_vm\_ioctl\_create\_vcpu**函数中进行处理，其代码如下。
 
-## 6.2. 基本流程
+## 6.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl() // kvm ioctl vm指令入口
@@ -967,7 +967,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 由此可见，上下文切换次数过于频繁会带来不小的性能开销，因此，很有必要对这方面进行优化。和操作系统进行**进程切换的思路**一样，KVM使用**Lazy Save/Restore** 的方法进行优化。其基本思想是**尽量不要对寄存器进行恢复/保存操作**，直到必须要这么做的时候，才进行类似的操作。
 
-## 7.2. 基本流程
+## 7.2. 整体流程
 
 **执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用**kvm\_arch\_vcpu\_ioctl\_run**函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
 
