--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/3. 中断虚拟化.md
@@ -65,82 +65,75 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 
 # PIC的创建
 
+## 整体流程
+
 ```cpp
-kvm_vm_ioctl() // kvm ioctl vm指令入口
-    kvm_vm_ioctl_create_vcpu() // 为虚拟机创建VCPU的ioctl调用的入口函数
-        kvm_arch_vcpu_precreate() // stable tsc检查
-        kmem_cache_zalloc(kvm_vcpu_cache, GFP_KERNEL); // 给kvm_vcpu分配内存, 该cache是kvm模块初始化时创建的
-        page = alloc_page(); // 分配一页内存给vcpu->run(struct kvm_run)
-        kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
-        kvm_arch_vcpu_create() // 初始化kvm_vcpu_arch结构体, 架构相关
-            vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED/KVM_MP_STATE_RUNNABLE; // 设置vcpu状态
-            kvm_set_tsc_khz() // tsc的设置
-            kvm_mmu_create() // kvm_vcpu_arch中mmu相关初始化, 内存虚拟化, 地址转换的重点
-                alloc_mmu_pages() // 给vcpu->arch的gust mmu和root mmu分配页面
-            kvm_create_lapic() // 初始化lapic
-            alloc_page(); // 给kvm_vcpu_arch的pio分配内存页
-            vcpu->arch.mce_banks = kzalloc(); // 以及其他一些代码实现初始化mce_banks
-            alloc_emulate_ctxt(vcpu); // 没有VMX时的软件模拟, 没人用...
-            vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
-            vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 虚拟机fpu的kmem cache
-            kvm_pmu_init(vcpu); // 
-            kvm_hv_vcpu_init(vcpu); // 
-            kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用 vmx_create_vcpu
-                vmx->vpid = allocate_vpid(); // 分配vpid
-                vmx->pml_pg = alloc_page(); // 
-                alloc_loaded_vmcs(&vmx->vmc01); // loaded_vmcs的分配以及初始化
-                    loaded_vmcs->vmcs = alloc_vmcs(); // 分配一个页面
-                    loaded_vmcs_init(loaded_vmcs); // 初始化 loaded_vmcs
-                        vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
-                    loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // msr_bitmap 分配页面
-                vmx_disable_intercept_for_msr();
-                vmx_vcpu_load(); // 加载vcpu信息
-                    vmx_vcpu_load_vmcs(); // 加载vmcs
-                        already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
-                            loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
-                            list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
-                        per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
-                        vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
-                            kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu); // 
-                            vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 没加载时, 写VMCS的TSS
-                            vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 没加载时, 写GDT
-                            vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
-                        decache_tsc_multiplier(); 
-                    vmx_vcpu_pi_load(); // 加载posted interrupt
-                init_vmcs(vmx); // 初始化vmcs, 而guest-state在vmx_vcpu_reset()
-                    vmcs_write32();
-                    vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
-                    vmx_set_constant_host_state(vmx); // 设置host-state常量
-                        vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址, 这里面是个ret, 详细说明见下面VCPU_RUN
-                vmx_vcpu_put();
-                    vmx_vcpu_pi_put();
-                    vmx_prepare_switch_to_host(); // 
-                put_cpu();
-            kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
-            vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
-                kvm_arch_vcpu_load(vcpu, cpu)
-                    kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的 vmx_vcpu_load(), 见上面
-            kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
-                kvm_lapic_reset(vcpu, init_event);
-                vcpu(kvm_vcpu)的很多变量的初始化
-                kvm_clear_interrupt_queue(vcpu);
-                kvm_clear_exception_queue(vcpu);
-                kvm_make_request(KVM_REQ_EVENT, vcpu);
-                kvmclock_reset(vcpu);
-                kvm_x86_ops->vcpu_reset(vcpu, init_event);
-            kvm_init_mmu(vcpu, false); // 初始化mmu
-            vcpu_put(vcpu);
-                kvm_arch_vcpu_put(vcpu);
-                preempt_notifier_unregister(&vcpu->preempt_notifier);
-                __this_cpu_write(kvm_running_vcpu, NULL);
-        kvm_create_vcpu_debugfs() // 创建vcpu的debugfs
-        kvm_get_kvm() // 增加kvm的引用计数
-        create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
-        kvm->vcpus[vcpu->vcpu_idx]=vcpu; //添加到虚拟机的vcpus数组
-        atomic_inc(&kvm->online_vcpus); //增加kvm->online_vcpus数目
-        kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
-            vcpu_load();
-            kvm_write_tsc();
+kvm_vm_ioctl()  // vm ioctl的入口
+ ├─  kvm_arch_vm_ioctl()     
+ |   ├─ handle_ept_violation()   // ept violation异常的处理
+ |   |   |─ exit_qualification = vmcs_readl(EXIT_QUALIFICATION);   // 读取exit_qualification字段
+ |   |   |─ gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);   // 读取虚拟机的物理地址
+ |   |   |─ error_code = XXXX;   // 拼凑error
+ |   |   |─ kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);   // 处理page fault异常
+ |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
+ |   |   |   |   └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号, 这是标准页面下的 GFN
+ |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
+ |   |   |   |           ├─ fast_page_fault();   // 快速page fault处理
+ |   |   |   |           ├─ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
+ |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
+ |   |   |   |           |   └─ *pfn = __gfn_to_pfn_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
+ |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的qemu中分配的页面的HVA
+ |   |   |   |           |        |   └─ return __gfn_to_hva_memslot();
+ |   |   |   |           |        |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
+ |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断
+ |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
+ |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
+ |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
+ |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表
+ |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation(说明到了叶子节点), 跳出
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 对于非叶子节点, 如果该entry页表项值为0, 表明下一级页表页不存在, 则分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
+ |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 非叶子结点, 下一级页表页不存在时, 将分配的下一级页表页链接到当前entry, 这是HPA
+ |   |   |   |           |        ├─ mmu_spte_set(sptep, spte);   // 将sp处理后成为spte, 将其添加到当前entry(sptep), HPA
+ |   |   |   |           |        └─ mmu_page_add_parent_pte(vcpu, sp, sptep); // 当前页表页(sp)会被多个上级页表项引用, 将所有上级页表项的parent_spte添加到当前页表页的patent_ptes链表中
+ |   |   |   |           |   └─ mmu_set_spte();   // 设置最后一级页表项(即表项指向真正的页面), sptep指向pfn, HPA
+ |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-## 
+## 代码分析
+
+代码入口在
+
+```cpp
+        case KVM_CREATE_IRQCHIP: {
+                mutex_lock(&kvm->lock);
+
+                r = -EEXIST;
+                if (irqchip_in_kernel(kvm))
+                        goto create_irqchip_unlock;
+
+                r = -EINVAL;
+                if (kvm->created_vcpus)
+                        goto create_irqchip_unlock;
+
+                r = kvm_pic_init(kvm);
+                if (r)
+                        goto create_irqchip_unlock;
+
+                r = kvm_ioapic_init(kvm);
+                if (r) {
+                        kvm_pic_destroy(kvm);
+                        goto create_irqchip_unlock;
+                }
+
+                r = kvm_setup_default_irq_routing(kvm);
+                if (r) {
+                        kvm_ioapic_destroy(kvm);
+                        kvm_pic_destroy(kvm);
+                        goto create_irqchip_unlock;
+                }
+                /* Write kvm->irq_routing before enabling irqchip_in_kernel. */
+                smp_wmb();
+                kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;
+```
