--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
@@ -1,9 +1,13 @@
 
 
+# 中断虚拟化
+
 中断虚拟化，有两方面：
 
 1. **如何保证物理中断只由host来处理**；
 2. host如何将一个**虚拟中断注入到guest**中。
+
+## 物理中断
 
 首先看物理中断情况:
 
@@ -13,15 +17,19 @@
 
 1. 首先是**vmx规定**，只要此**虚拟机vmcs**的"`VM-Execution control field`"中的"`External -interrupt exiting`"**位设置为1**，**物理中断**将**导致VMExit**(vmcs的配置可以参考“IA32 Intel Architecture Software Developer’s Manual Volume 3B System Programming Guide”)。
 
-2. 知道了1. 后，我就想过，**物理中断不是应该立刻由硬件来响应**么，那么是**响应中断在前**，还是**VMExit在前**呢？如果**响应在前**，此时**IDTR还没有恢复为host**的，将导致取guest IDT，所以显然不行，**只能是VMExit在前**，但是VMExit过程中硬件只能恢复host的非通用寄存器，通用寄存器还得由软件来恢复(vmx_vcpu_run函数代码)，物理中断却要在恢复通用寄存器之间了，显然也不行。后来才发现，原来在进入guest执行前，kvm是关中断的，在VMExit完全恢复了host上下文后，才开中断——关中断是vcpu_enter _guest函数中调用了local_irq_disable，开中断是在这个函数从kvm_x86_ops->run返回后(即VMExit后)调用local_irq_enable。现在一切都明白了：guest vcpu执行时，物理中断来了，它可以导致VMExit，但是此时是关中断，所以硬件不会响应中断，中断处于pending，在中断开后，硬件发现pending中断并开始响应，此时已经是在host上下文中，IDTR已经指向host的IDT，因此物理中断实际上是由host handler来处理了。
+2. 知道了1. 后，我就想过，**物理中断不是应该立刻由硬件来响应**么，那么是**响应中断在前**，还是**VMExit在前**呢？如果**响应在前**，此时**IDTR还没有恢复为host**的，将导致取guest IDT，所以**显然不行**，**只能是VMExit在前**，但是**VMExit过程**中**硬件只能恢复host的非通用寄存器**，通用寄存器还得由**软件来恢复**(**vmx_vcpu_run函数代码**)，**物理中断**却要在**恢复通用寄存器之间**了，显然也不行。后来才发现，原来在**进入guest执行前**，**kvm是关中断的**，在**VMExit完全恢复了host上下文**后，**才开中断**——关中断是`vcpu_enter_guest`函数中调用了`local_irq_disable`，**开中断**是在这个函数从`kvm_x86_ops->run`**返回后**(即**VMExit后**)调用`local_irq_enable`。现在一切都明白了：**guest vcpu执行时**，**物理中断来了**，它可以导致**VMExit**，但是此时是**关中断**，所以**硬件不会响应中断**，中断处于**pending**，在**中断开后**，硬件发现**pending中断并开始响应**，此时已经是在**host上下文**中，**IDTR已经指向host的IDT**，因此物理中断实际上是由**host handler来处理**了。
 
-再来看虚拟中断的情况；KVM用QEMU来提供设备模拟，与物理设备一样，模拟的设备也可以发出中断信号，但是这个中断信号是软件虚拟的，那么这个虚拟中断是怎样注入到虚拟机中去的呢？这个又要分两种情况：
+## 虚拟中断
 
-1. 此时guest vcpu正在执行；
+再来看虚拟中断的情况；
 
-2. guest vcpu刚到用户模式执行完IO指令模拟操作，还没有开始VMEntry。
+KVM用QEMU来提供**设备模拟**，与物理设备一样，**模拟的设备**也可以**发出中断信号**，但是这个**中断信号是软件虚拟**的，那么这个虚拟中断是怎样注入到虚拟机中去的呢？这个又要分两种情况：
 
-对于2. 情况，可以参考vmx_inject_irq和vmx_inject_nmi(vmx.c)，可以发现，kvm是利用vmx支持这种注入操作的特性：vmcs中有"VM-Entry control fields"，其中又包含"VM-entry interruption-information field"，可以将中断类型和中断号记录到其中，在VMEntry过程中，硬件会自动检测这个信息域，如果有效，就会在真正执行任何guest指令之前，像原来硬件一样响应此中断(包括压IP,CS,FLAGS；从IDT中取interrupt vector等)，注意此操作是在恢复了guest上下文之后，所以物理IDTR已经是指向guest OS IDT了，因此这个虚拟中断就由guest handler来处理了。
+1. 此时**guest vcpu正在执行**；
+
+2. **guest vcpu**刚到**用户模式**执行完**IO指令模拟操作**，还**没有开始VMEntry**。
+
+对于2. 情况，可以参考`vmx_inject_irq`和`vmx_inject_nmi`(`vmx.c`)，可以发现，kvm是利用**vmx支持**这种**注入操作的特性**：vmcs中有"`VM-Entry control fields`"，其中又包含"`VM-entry interruption-information field`"，可以将**中断类型**和**中断号**记录到其中，在**VMEntry过程**中，硬件会**自动检测这个信息域**，如果有效，就会在**真正执行任何guest指令之前**，像原来硬件一样**响应此中断**(包括**压IP,CS,FLAGS**；从**IDT中取interrupt vector**等)，注意此操作是在**恢复了guest上下文之后**，所以**物理IDTR**已经是指向**guest OS IDT**了，因此这个虚拟中断就由guest handler来处理了。
 
 补充上段：假如在guest运行期间发生了一个物理中断，kvm是如何截获进入将其注入到guest中去的呢？有两个步骤：
 
