--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
@@ -21,11 +21,11 @@
 
 补充上段：假如在**guest运行期间**发生了一个**物理中断**，kvm是**如何截获**进入将其**注入到guest**中去的呢？有两个步骤：
 
-1. 在`vmx_vcpu_run`中，从**guest mode返回**后会**调用**`complete_interrupt`函数。因为硬件会将**中断类型**和那个**中断号**写入到**VMCS**中，所以`complete_interrupt`的任务就是**从VMCS中取出中断信息**，然后**写入vcpu的控制块**中去，使得这个中断变成一种pending event。
+1. 在`vmx_vcpu_run`中，从**guest mode返回！！！** 后会**调用**`complete_interrupt`函数。因为硬件会将**中断类型**和那个**中断号**写入到**VMCS**中，所以`complete_interrupt`的任务就是**从VMCS中取出中断信息**，然后**写入vcpu的控制块**中去，使得这个中断变成一种pending event。
 
-2. 在`vcpu_enter_guest`中，在**进入guest mode前**会调用`inject_pending_event`。`inject_pending_event`发现**vcpu控制块**中**有pending的中断信息**，就调用`vmx_inject_irq`将其**写入VMCS中**去，就相当于**将中断注入到guest**中去了。
+2. 在`vcpu_enter_guest`中，在**进入guest mode前！！！** 会调用`inject_pending_event`。`inject_pending_event`发现**vcpu控制块**中**有pending的中断信息**，就调用`vmx_inject_irq`将其**写入VMCS中**去，就相当于**将中断注入到guest**中去了。
 
-对于1. 情况，暂时也还不知道KVM具体是如何实现的。不过vmx倒也是支持这种注入操作。只要vmcs的"VM-Execution control field"中的"Interrupt-window exiting"位设置为1，只要guest IF=1，在下一条任意指令前，会发生VMExit，就像普通情况下发生了一次中断一样。也就是说，kvm应该可以通过设置"Interrupt-window exiting"中断guest vcpu的执行，然后像后一种情况一样，把虚拟中断注入到虚拟机中。
+对于1. 情况，暂时也还不知道KVM具体是如何实现的。不过vmx倒也是支持这种注入操作。只要vmcs的"`VM-Execution control field`"中的"`Interrupt-window exiting`"位设**置为1**，**只要guest IF=1**，在**下一条任意指令前**，会发生**VMExit**，就像**普通情况下发生了一次中断**一样。也就是说，**kvm**应该可以通过设置"`Interrupt-window exiting`"**中断guest vcpu的执行**，然后像后一种情况一样，**把虚拟中断注入到虚拟机中**。
 
 ## 虚拟中断
 
