--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -990,8 +990,10 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
  |	|	|   ├─ kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
  |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
+ |	|	|   |   ├─ vmx->exit_reason =  vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);  // 获取vm-exit原因
+ |	|	|   |   ├─ vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD); // 获取
  |	|	|   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
- |	|	|   |   ├─ vmx_complete_interrupts(vmx);  // 恢复中断
+ |	|	|   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
  |	|	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
  |	|	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
  |	|	|   ├─ kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
