--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -287,7 +287,9 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 }
 ```
 
-该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，判断`kvm_ioapic_redirect_entry`**没有设置mask**，然后根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
+该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，判断`kvm_ioapic_redirect_entry`**没有设置mask**，然后根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。
+
+之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
 
 ```cpp
 int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
