--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
@@ -3,22 +3,27 @@
 
 <!-- code_chunk_output -->
 
-- [local APIC寄存器地址](#local-apic寄存器地址)
-  - [local APIC寄存器基地址](#local-apic寄存器基地址)
-    - [local APIC寄存器重定位](#local-apic寄存器重定位)
-- [local APIC寄存器列表](#local-apic寄存器列表)
+- [1. 两种寄存器映射方式](#1-两种寄存器映射方式)
+- [2. local APIC寄存器地址](#2-local-apic寄存器地址)
+  - [2.1. local APIC寄存器基地址](#21-local-apic寄存器基地址)
+    - [2.1.1. local APIC寄存器重定位](#211-local-apic寄存器重定位)
+- [3. local APIC寄存器列表](#3-local-apic寄存器列表)
 
 <!-- /code_chunk_output -->
 
-**APIC**和**xAPIC版本**中，local APIC**寄存器映射到物理地址**中。而**x2APIC模式**中local APIC**寄存器映射到MSR寄存器组**。
+# 1. 两种寄存器映射方式
 
-# local APIC寄存器地址
+**APIC**和**xAPIC版本**中，local APIC寄存器映射到**物理地址**中。
+
+而**x2APIC模式**中local APIC寄存器映射到**MSR寄存器组**。
+
+# 2. local APIC寄存器地址
 
 local APIC**寄存器的地址**是以**APIC\_BASE(在IA32\_APIC\_BASE寄存器中)作为基地址**，**每个local APIC寄存器**都有**自己对应的偏移量**，以**local APIC ID寄存器**的地址为例：它的**偏移量是20H**，那么**local APIC ID寄存器的地址就是APIC\_BASE+20H**。
 
-## local APIC寄存器基地址
+## 2.1. local APIC寄存器基地址
 
-local APIC寄存器的**基地址值**来自**IA32\_APIC\_BASE寄存器**。
+local APIC寄存器的**基地址值**来自`IA32\_APIC\_BASE寄存器**。
 
 当**处理器power\-up**或**reset**时**APIC base值为FEE00000h**。APIC base值的**宽度依赖于MAXPHYADDR值**（**36位，40位或52位**），**低12位为0**值，因此APIC base地址将在**4K页边界**上。
 
@@ -44,7 +49,7 @@ mov eax，[APIC_BASE + SVR]   ;访问 local APIC 的 SVR
 
 值得注意的是，由于APIC base物理地址是提交到local APIC硬件上，因此APIC base的物理地址必须以stong uncacheable（不可cache）的内存类型映射。我们在映射的时候使用PCD=1，并且PWT=1的PAT属性来指定page的内存类型（关于PAT属性详情，请参考11.7节描述）。这段区域也可以指定为XD（Execute disable）类型
 
-### local APIC寄存器重定位
+### 2.1.1. local APIC寄存器重定位
 
 xAPIC版本的local APIC寄存器的地址允许被重定位，使用IA32\_APIC\_BASE寄存器提供一个新值。在开启分页机制的环境下，我们还必须考虑到上面所说的映射page的内存类型。
 代码清单18-7（lib\apic.asm）：
@@ -96,7 +101,7 @@ mov esi，[APIC_BASE + 0xfef00000 - 0xfee00000 + SVR]
 
 我们可以看到，这个结果中使用基于新APIC base地址的SVR值和原SVR的值是相同的，表明APIC base地址已经成功设置为新的地址。
 
-# local APIC寄存器列表
+# 3. local APIC寄存器列表
 
 下面是local APIC寄存器的完整列表，**APIC寄存器的基地址是FEE00000H**。
 
