--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR(Interrupt Command Register).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR(Interrupt Command Register).md
@@ -3,11 +3,11 @@
 
 <!-- code_chunk_output -->
 
-* [1 Destination Shorthand域](#1-destination-shorthand域)
-* [2 Destination Mode域](#2-destination-mode域)
-* [3 Destination Field域](#3-destination-field域)
-* [4 Lowest Priority模式](#4-lowest-priority模式)
-* [5 Start Up模式](#5-start-up模式)
+- [Destination Shorthand域](#destination-shorthand域)
+- [2 Destination Mode域](#2-destination-mode域)
+- [3 Destination Field域](#3-destination-field域)
+- [4 Lowest Priority模式](#4-lowest-priority模式)
+- [5 Start Up模式](#5-start-up模式)
 
 <!-- /code_chunk_output -->
 
@@ -19,7 +19,7 @@
 
 **ICR与LVT寄存器部分域作用是相同的**，此外还新增了几个域。
 
-# 1 Destination Shorthand域
+# Destination Shorthand域
 
 这个域设置发送IPI消息的**目标类型**。
 
