--- a/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/0. 概述.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第7章 MSR/0. 概述.md
@@ -1,4 +1,6 @@
-**MSR（Model\-Specific Register**）是让人头痛的一类寄存器，这类寄存器数量庞大，Intel和AMD的处理器的实现程度也不相同，并且在Intel的不同架构上也可能不同。因此，**MSR是与处理器model相关的**。关于处理器的model请参考4.3节的描述。
+**MSR（Model\-Specific Register**）是让人头痛的一类寄存器，这类寄存器数量庞大，Intel和AMD的处理器的实现程度也不相同，并且在Intel的不同架构上也可能不同。
+
+因此，**MSR是与处理器model相关的**。关于处理器的model请参考4.3节的描述。
 
 >MSR有什么作用？
 
