--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
@@ -22,7 +22,7 @@
 
 在**没有guest**情况下，一旦CPU检测到**中断信号**，将在**下一条指令之前响应中断**，根据**中断号**从**host OS IDT**中取到对应的中断向量，然后调用**interrupt handler**。
 
-但是，假如**guest vcpu**正在**执行中**来了**物理中断**，此时的**物理IDTR**指向的是**guest OS的IDT**。原则上肯定**不能是由guest handler**去处理物理中断，所以必须通过**某种机制**来处理，这个机制由两部分配合：
+但是，假如**guest vcpu**正在**执行中**来了**物理中断**，此时的**物理IDTR**指向的是**guest OS的IDT**。原则上肯定**不会是由guest handler**去处理**物理中断**，所以必须通过**某种机制**来处理，这个机制由两部分配合：
 
 1. 首先是**vmx规定**，只要此**虚拟机vmcs**的"`VM-Execution control field`"中的"`External -interrupt exiting`"**位设置为1**，**物理中断**将**导致VMExit**(vmcs的配置可以参考“IA32 Intel Architecture Software Developer’s Manual Volume 3B System Programming Guide”)。
 
