--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -981,14 +981,14 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
  |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest模式
  |	|	|   ├─ kvm_check_requests()  			// 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
- |	|	|   ├─ (kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win)  // 检查是否有事件请求
+ |	|	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
  |	|	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
  |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
- |	|	|   ├─ kvm_x86_ops->prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
+ |	|	|   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
  |	|	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
  |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
  |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
- |	|	|   ├─ kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
+ |	|	|   ├─ kvm_x86_ops.run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
  |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令, 再往后就是vm-exit的流程了
  |	|	|   |   ├─ vmx->exit_reason =  vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);  // 获取vm-exit原因
  |	|	|   |   ├─ vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD); // 获取
@@ -996,7 +996,8 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
  |	|	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
  |	|	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
- |	|	|   ├─ kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
+ |	|	|   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu, &exit_fastpath);	// vcpu mode
+ |	|	|   ├─ kvm_x86_ops.handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
  ├─         								// 
 ```
 
@@ -1339,6 +1340,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
          * IPI are then delayed after guest entry, which ensures that they
          * result in virtual interrupt delivery.
          */
+        // 关闭中断了, 外部中断全部不接收
         local_irq_disable();
         vcpu->mode = IN_GUEST_MODE;
 
@@ -1372,6 +1374,7 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
             || need_resched() || signal_pending(current)) {
                 vcpu->mode = OUTSIDE_GUEST_MODE;
                 smp_wmb();
+                // 打开外部中断
                 local_irq_enable();
                 preempt_enable();
                 vcpu->srcu_idx = srcu_read_lock(&vcpu->kvm->srcu);
@@ -1444,8 +1447,10 @@ static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
          * stat.exits increment will do nicely.
          */
         kvm_before_interrupt(vcpu);
+        // 打开中断
         local_irq_enable();
         ++vcpu->stat.exits;
+        // 关闭中断
         local_irq_disable();
         kvm_after_interrupt(vcpu);
         // 计算虚拟机的退出时间
@@ -1493,7 +1498,7 @@ out:
 }
 ```
 
-见上面注释, 调用架构相关的run接口(vmx_vcpu_run)，进入Guest模式
+见上面注释, 调用架构相关的run接口(`vmx_vcpu_run`)，进入Guest模式
 
 ```cpp
 /*
