--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/1. 基本原理.md
@@ -4,6 +4,7 @@
 
 - [中断虚拟化](#中断虚拟化)
 - [物理中断](#物理中断)
+  - [vcpu运行时的截获和注入](#vcpu运行时的截获和注入)
 - [虚拟中断](#虚拟中断)
 - [参考](#参考)
 
@@ -26,7 +27,13 @@
 
 1. 首先是**vmx规定**，只要此**虚拟机vmcs**的"`VM-Execution control field`"中的"`External -interrupt exiting`"**位设置为1**，**物理中断**将**导致VMExit**(vmcs的配置可以参考“IA32 Intel Architecture Software Developer’s Manual Volume 3B System Programming Guide”)。
 
-2. 知道了1. 后，**物理中断不是应该立刻由硬件来响应**么，那么是**响应中断在前**，还是**VMExit在前**呢？如果**响应在前**，此时**IDTR还没有恢复为host**的，将导致取guest IDT，所以**显然不行**，**只能是VMExit在前**，但是**VMExit过程**中**硬件只能恢复host的非通用寄存器！！！**，**通用寄存器**还得由**软件！！！来恢复(vmx_vcpu_run函数代码**)，**物理中断**却要在**恢复通用寄存器之间**了，显然也不行。后来才发现，原来在**进入guest执行前**，**kvm是关中断的**，在**VMExit完全恢复了host上下文**后，**才开中断**——关中断是`vcpu_enter_guest`函数中调用了`local_irq_disable`，**开中断**是在这个函数从`kvm_x86_ops->run`**返回后**(即**VMExit后**)调用`local_irq_enable`。现在一切都明白了：**guest vcpu执行时**，**物理中断来了**，它可以导致**VMExit**，但是此时是**关中断**，所以**硬件不会响应中断**，中断处于**pending**，在**中断开后**，硬件发现**pending中断并开始响应**，此时已经是在**host上下文**中，**IDTR已经指向host的IDT**，因此物理中断实际上是由**host handler来处理**了。
+2. 知道了1. 后，**物理中断不是应该立刻由硬件来响应**么，那么是**响应中断在前**，还是**VMExit在前**呢？如果**响应在前**，此时**IDTR还没有恢复为host**的，将导致取guest IDT，所以**显然不行**，**只能是VMExit在前**，但是**VMExit过程**中**硬件只能恢复host的非通用寄存器！！！**，**通用寄存器**还得由**软件！！！来恢复(vmx_vcpu_run函数代码**)，**物理中断**却要在**恢复通用寄存器之间**了，显然也不行。
+
+后来才发现，原来在**进入guest执行前**，**kvm是关中断的**，在**VMExit完全恢复了host上下文**后，**才开中断**——关中断是`vcpu_enter_guest`函数中调用了`local_irq_disable`，**开中断**是在这个函数从`kvm_x86_ops->run`**返回后**(即**VMExit后**)调用`local_irq_enable`。
+
+现在一切都明白了：**guest vcpu执行时**，**物理中断来了**，它可以导致**VMExit**，但是此时是**关中断**，所以**硬件不会响应中断**，中断处于**pending**，在**中断开后**，硬件发现**pending中断并开始响应**，此时已经是在**host上下文**中，**IDTR已经指向host的IDT**，因此物理中断实际上是由**host handler来处理**了。
+
+## vcpu运行时的截获和注入
 
 假如在**guest运行期间**发生了一个**物理中断**，kvm是**如何截获**进入将其**注入到guest**中去的呢？有两个步骤：
 
