--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -996,7 +996,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   |   └─ vmx_complete_interrupts(vmx);  // 恢复中断
  |	|	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
  |	|	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
- |	|	|   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu, &exit_fastpath);	// vcpu mode
+ |	|	|   ├─ kvm_x86_ops.handle_exit_irqoff(vcpu);	// vcpu mode
  |	|	|   ├─ local_irq_enable();	// 打开中断
  |	|	|   ├─ kvm_x86_ops.handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
  ├─         								// 
