--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -3,9 +3,9 @@
 
 <!-- code_chunk_output -->
 
-- [1 IPI消息对象](#1-ipi消息对象)
-  - [1.1 使用No shorthand目标类型](#11-使用no-shorthand目标类型)
-- [2 使用physical目标模式](#2-使用physical目标模式)
+- [IPI消息对象](#ipi消息对象)
+  - [使用No shorthand目标类型](#使用no-shorthand目标类型)
+- [使用physical目标模式](#使用physical目标模式)
   - [2.1 广播IPI消息](#21-广播ipi消息)
   - [2.2 使用其他交付模式](#22-使用其他交付模式)
 - [3 使用logical目标模式](#3-使用logical目标模式)
@@ -34,11 +34,11 @@ mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 
 值得注意的是，当需要写完整的**64位ICR命令字**时，应**先写高32位字**，再写低32位字。
 
-# 1 IPI消息对象
+# IPI消息对象
 
 **ICR**的destination shorthand域设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。在Self、All including self，以及All excluding self目标类型中使用固定的目标对象。
 
-## 1.1 使用No shorthand目标类型
+## 使用No shorthand目标类型
 
 在No Shorthand目标类型里，最终的IPI消息目标依赖于下面几个设置。
 
@@ -46,7 +46,7 @@ mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 
 ② Destination field（目标域）：这个值对于physical还是logical模式有不同的解释, **提供目标processor地址**。
 
-# 2 使用physical目标模式
+# 使用physical目标模式
 
 physical目标模式需要在**ICR寄存器的destination field域**（高32位）里直接给出**目标处理器的APIC ID值**，如下面的IPI命令字。
 
