--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR(Interrupt Command Register).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR(Interrupt Command Register).md
@@ -4,8 +4,8 @@
 <!-- code_chunk_output -->
 
 - [Destination Shorthand域](#destination-shorthand域)
-- [2 Destination Mode域](#2-destination-mode域)
-- [3 Destination Field域](#3-destination-field域)
+- [Destination Mode域](#destination-mode域)
+- [Destination Field域](#destination-field域)
 - [4 Lowest Priority模式](#4-lowest-priority模式)
 - [5 Start Up模式](#5-start-up模式)
 
@@ -31,11 +31,11 @@
 
 ④ 11（All excluding self）：给所有logical processor发送IPI命令，但**不包括自己**。
 
-# 2 Destination Mode域
+# Destination Mode域
 
 这个域使用在**No Shorthand模式**中，提供**查找目标processor的方式**。0为**physical方式**，1为**logical方式**。它们的使用依赖于**LDR（Logical Destination Register**）和**DFR（Destination Format Register**）。我们将在后面进行探讨。
 
-# 3 Destination Field域
+# Destination Field域
 
 这个域提供**目标processor地址**。我们将在后面的发送IPI消息部分进行探讨。
 
