--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/9. 中断vector及priority.md
@@ -3,20 +3,20 @@
 
 <!-- code_chunk_output -->
 
-- [local interrupt的vector设置](#local-interrupt的vector设置)
-- [有效的vector值](#有效的vector值)
-  - [使用0～15时](#使用0~15时)
-  - [使用16～31时](#使用16~31时)
-- [local interrupt的优先级](#local-interrupt的优先级)
-  - [TPR（Task Priority Register）](#tprtask-priority-register)
-  - [处理器当前的优先级](#处理器当前的优先级)
-- [在64位模式下的优先级](#在64位模式下的优先级)
+- [1. local interrupt的vector设置](#1-local-interrupt的vector设置)
+- [2. 有效的vector值](#2-有效的vector值)
+  - [2.1. 使用0～15时](#21-使用0~15时)
+  - [2.2. 使用16～31时](#22-使用16~31时)
+- [3. local interrupt的优先级](#3-local-interrupt的优先级)
+  - [3.1. TPR（Task Priority Register）](#31-tprtask-priority-register)
+  - [3.2. 处理器当前的优先级](#32-处理器当前的优先级)
+- [4. 在64位模式下的优先级](#4-在64位模式下的优先级)
 
 <!-- /code_chunk_output -->
 
 **LVT寄存器和ICR寄存器**的**vector域**提供local interrupt的vector值，这个vector的使用将和保护模式下中断/异常处理的vector一致，**从IDT里读取interrupt描述符**。
 
-# local interrupt的vector设置
+# 1. local interrupt的vector设置
 
 在**LVT寄存器和ICR寄存器**里vector域的设置依赖于它们的**delivery mode(交付模式**)。
 
@@ -32,19 +32,19 @@
 
 ⑥ Lowest priority模式和Start-Up模式：使用在**ICR寄存器**里，允许在vector提供**自定义的vector**值。
 
-# 有效的vector值
+# 2. 有效的vector值
 
 在前面所述的需要提供vector值时，不应该使用x86/x64体系中预定义（或保留）的0～31号作为vector，正常的中断向量号应该使用32～255（用户自定义的vector）。
 
-## 使用0～15时
+## 2.1. 使用0～15时
 
 vector设置为0～15，它是**无效的中断向量号**，中断**不会被响应**。local APIC将在**ESR（Error Status Register）里记录这个错误**。从而引发**LVT error中断(通过LVT Error寄存器！！！**)，在**未屏蔽时**将执行由**LVT error寄存器**设置的错误处理程序。
 
-## 使用16～31时
+## 2.2. 使用16～31时
 
 vector设置为16～31，local APIC**不会认为它是无效**的。可是当local interrupt使用这个范围内的中断向量号将会和系统所定义中断/异常处理例程产生冲突。引起调用OS中预定义的异常处理例程，导致**执行错误的中断处理**。
 
-# local interrupt的优先级
+# 3. local interrupt的优先级
 
 在local APIC里，**中断的优先级基于中断vector(！！！**)来判定，**vector的值越大**，**优先级越高**。将256个中断向量号分为**16个priority level（中断优先等级**）或称为**priority class**，基于下面的算法。
 
@@ -64,7 +64,7 @@ priority_level=vector / 16
 
 根据前面所述，通常**一个中断向量号(！！！还是一字节宽！！！**)，可以分为**两部分**，**高4位**对应于**priority level**，**低4位是rank**或sub-class值。在同一个等级里，rank值高则优先级高。
 
-## TPR（Task Priority Register）
+## 3.1. TPR（Task Priority Register）
 
 local APIC提供了一个**TPR（task priority register，任务优先级寄存器**），在TPR里设定一个值，允许local APIC**只响应优先级高于这个值的中断**。
 
@@ -85,7 +85,7 @@ else
 
 值得注意的是，使用**NMI、SMI、INIT、ExtINT，以及Start-Up交付模式**的中断**不受TPR的影响**。
 
-## 处理器当前的优先级
+## 3.2. 处理器当前的优先级
 
 然而，一个**中断请求能得到响应**，并**不是只依据TPR[7：4]的值**，还需要**依赖于ISR（In-Service Register**），在**TPR和ISR的互相作用**下产生“**处理器当前的优先级**”。
 
@@ -111,7 +111,7 @@ else
 
 从上面的运行结果我们可以看到，当设TPR的值为0x32时（PPR也为0x32），0x33号中断请求记录在IRR里（第0x33位置位），但被抑制没有响应。
 
-# 在64位模式下的优先级
+# 4. 在64位模式下的优先级
 
 在**x64体系**里，提供了**CR8寄存器作为TPR（Task Priority Register）的编程接口**，CR8寄存器仅在64位模式下有效：
 
