--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -30,13 +30,13 @@
 mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 ```
 
-这条指令往64位ICR寄存器的低32位写入IPI命令字000C4620H，这个命令会向所有的处理器（除了自已）发送SIPI消息。
+这条指令往**64位ICR寄存器**的**低32位**写入**IPI命令字000C4620H**，这个命令会向**所有的处理器**（除了自已）发送**SIPI消息**。
 
 值得注意的是，当需要写完整的**64位ICR命令字**时，应**先写高32位字**，再写低32位字。
 
 # IPI消息对象
 
-**ICR**的destination shorthand域设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。在Self、All including self，以及All excluding self目标类型中使用固定的目标对象。
+**ICR**的**destination shorthand域**设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。在Self、All including self，以及All excluding self目标类型中使用固定的目标对象。
 
 ## 使用No shorthand目标类型
 
