--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR-IPI.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR-IPI.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [ICR寄存器](#icr寄存器)
 - [Destination Shorthand域](#destination-shorthand域)
 - [Destination Mode域](#destination-mode域)
 - [Destination Field域](#destination-field域)
@@ -11,11 +12,15 @@
 
 <!-- /code_chunk_output -->
 
+# ICR寄存器
+
 **logical processor**可以使用**ICR（interrupt command register**）向**一个**或**一组logical processor**发送**inter-processor interrupt（IPI）进行通信**，如实验18-6所示。
 
 ![config](./images/39.png)
 
-上图是在**xAPIC模式**下，**64位**的ICR分为**两部分映射在物理地址**上，**高32位地址偏移量是310H，低32位地址偏移量是300H**（在**x2APIC模式**下使用**RDMSR和WRMSR指令**访问**64位的MSR地址是830H**）。
+上图是在**xAPIC模式**下，**64位**的ICR分为**两部分映射在物理地址**上，**高32位地址偏移量是310H，低32位地址偏移量是300H**
+
+在**x2APIC模式**下使用**RDMSR和WRMSR指令**访问**64位的MSR地址是830H**。
 
 **ICR与LVT寄存器部分域作用是相同的**，此外还新增了几个域。
 
