--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
@@ -124,7 +124,7 @@ mov esi，[APIC_BASE + 0xfef00000 - 0xfee00000 + SVR]
 
 >实验18-3：打印local APIC寄存器列表
 
-在这个实验里，笔者使用dump\_apic（）函数打印local APIC寄存器的信息，这个dump\_apic（）函数实现在lib\apic.asm文件里，函数比较长，为节省篇幅这里不列出来，读者可自行查阅。
+在这个实验里，笔者使用`dump_apic()`函数打印local APIC寄存器的信息，这个dump\_apic（）函数实现在lib\apic.asm文件里，函数比较长，为节省篇幅这里不列出来，读者可自行查阅。
 
 ![config](./images/12.png)
 
