--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/5. Local APIC版本寄存器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/5. Local APIC版本寄存器.md
@@ -10,7 +10,7 @@ local APIC版本寄存器分为**三个部分**。
 
 ③ **bit 24**：这个位指示**是否支持SVR**（Spurious Interrupt Vector Register）的bit 12位，为1时支持，否则不支持。
 
-**SVR[12]是Suppress EOI Broadcast（抑制EOI广播到I/O APIC）位**，在版本寄存器的bit 24为1时，可以对SVR[12]进行置位（当**SVR[12]置位**时，d**elivery mode为Fixed模式**，且属于**level触发中断**，它的**中断服务例程完成**后，发送**EOI命令时将不会发送到I/O APIC**）。
+`SVR[12]`是Suppress EOI Broadcast（抑制EOI广播到I/O APIC）位，在版本寄存器的bit 24为1时，可以对`SVR[12]`进行置位（当`SVR[12]`置位时，delivery mode为Fixed模式，且属于level触发中断，它的中断服务例程完成后，发送EOI命令时将不会发送到I/O APIC）。
 
 ![config](./images/37.png)
 
