--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/1. APIC体系概述.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/1. APIC体系概述.md
@@ -110,4 +110,6 @@ Pentium 4和Intel Xeon处理器在APIC的基础上进一步扩展，形成了xAP
 
 ## 3.2. x2APIC
 
-x2APIC是进一步扩展的版本，并向下**兼容xAPIC**，新增了**一组MSR寄存器来代替内存映射的寄存器**。在x2APIC中处理器的**ID地址被扩展为32位**，后面我们将讨论到x2APIC ID。
+x2APIC是进一步扩展的版本，并向下**兼容xAPIC**，新增了**一组MSR寄存器来代替内存映射的寄存器**。
+
+在x2APIC中处理器的**ID地址被扩展为32位**，后面我们将讨论到x2APIC ID。
