--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
@@ -19,7 +19,7 @@
 
 # 2. local APIC寄存器地址
 
-local APIC**寄存器的地址**是以**APIC\_BASE(在IA32\_APIC\_BASE寄存器中)作为基地址**，**每个local APIC寄存器**都有**自己对应的偏移量**，以**local APIC ID寄存器**的地址为例：它的**偏移量是20H**，那么**local APIC ID寄存器的地址就是APIC\_BASE+20H**。
+local APIC**寄存器的地址**是以`APIC_BASE`(在`IA32_APIC_BASE`寄存器中)作为基地址，**每个local APIC寄存器**都有**自己对应的偏移量**，以**local APIC ID寄存器**的地址为例：它的**偏移量是20H**，那么local APIC ID寄存器的地址就是`APIC_BASE+20H`。
 
 ## 2.1. local APIC寄存器基地址
 
@@ -32,11 +32,11 @@ local APIC寄存器的**基地址值**来自`IA32_APIC_BASE`寄存器。
 代码清单18-6（lib\page32.asm）：
 
 ```asm
-； 0x800000 映射到 0xFEE00000（Local APIC 区域）
+; 0x800000 映射到 0xFEE00000（Local APIC 区域）
       mov DWORD [PDT_BASE + 4 * 8]，0xFEE00000 | PS | PCD | PWT | RW | P
-； PCD=1，PWT=1
+; PCD=1，PWT=1
       mov eax，[xd_bit]
-      mov DWORD [PDT_BASE + 4 * 8 + 4]，eax          ； XD位
+      mov DWORD [PDT_BASE + 4 * 8 + 4]，eax          ; XD位
 ```
 
 上面这段代码将**virtual address 0x800000**映射到**物理地址0xFEE00000**上，如果我们定义一个常量符号APIC\_BASE为0x800000值，那么：
