--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -24,7 +24,7 @@
 
 <!-- /code_chunk_output -->
 
-前面介绍的**ICR（Interrupt Command Register**）用于产生**IPI（Inter-processor interrupt）消息**，当往ICR寄存器的**低32位**写入**IPI命令字**时，处理器就产生了IPI消息发送到system bus上。
+前面介绍的**ICR（Interrupt Command Register**）用于产生**IPI（Inter-processor interrupt）消息**，当往ICR寄存器的**低32位**写入**IPI命令字**时，处理器就产生了**IPI消息**发送到**system bus**上。
 
 ```x86asm
 mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
