--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/4. Local APIC ID.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/4. Local APIC ID.md
@@ -42,9 +42,9 @@
 
 无论是在Intel还是AMD平台上，local APIC ID都非常重要。在**处理器power\-up或reset**后，**处理器和bus硬件**上赋予**每个local APIC唯一的initial APIC ID值**，这个唯一的APIC ID值基于**system bus上的拓扑结构**构建，可以使用下面的方法查询这个值。
 
-① 在处理器支持**CPUID 0B leaf**的情况下，使用**CPUID.0B：EDX[31：0**]得到**32位的APIC ID值**。
+① 在处理器支持**CPUID 0B leaf**的情况下，使用`CPUID.0B：EDX[31：0]`得到**32位的APIC ID值**。
 
-② **不支持CPUID 0B leaf**时，使用**CPUID.01：EBX[31：24]得到8位的APIC ID值**。
+② **不支持CPUID 0B leaf**时，使用`CPUID.01：EBX[31：24]`得到8位的APIC ID值**。
 
 然后，在**处理器power\-up或者reset**期间，这个**initial**值被写入到**local APIC ID寄存器**里（在**支持CPUID 0B leaf**但**不支持x2APIC模式**时，**只保存32位APIC ID值的低8位**）。
 
