--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR寄存器-IPI.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/7. ICR寄存器-IPI.md
@@ -3,16 +3,16 @@
 
 <!-- code_chunk_output -->
 
-- [ICR寄存器](#icr寄存器)
-- [Destination Shorthand域](#destination-shorthand域)
-- [Destination Mode域](#destination-mode域)
-- [Destination Field域](#destination-field域)
-- [4 Lowest Priority模式](#4-lowest-priority模式)
-- [5 Start Up模式](#5-start-up模式)
+- [1. ICR寄存器](#1-icr寄存器)
+- [2. Destination Shorthand域](#2-destination-shorthand域)
+- [3. Destination Mode域](#3-destination-mode域)
+- [4. Destination Field域](#4-destination-field域)
+- [5. Lowest Priority模式](#5-lowest-priority模式)
+- [6. Start Up模式](#6-start-up模式)
 
 <!-- /code_chunk_output -->
 
-# ICR寄存器
+# 1. ICR寄存器
 
 **logical processor**可以使用**ICR（interrupt command register**）向**一个**或**一组logical processor**发送**inter-processor interrupt（IPI）进行通信**，如实验18-6所示。
 
@@ -24,7 +24,7 @@
 
 **ICR与LVT寄存器部分域作用是相同的**，此外还新增了几个域。
 
-# Destination Shorthand域
+# 2. Destination Shorthand域
 
 这个域设置发送IPI消息的**目标类型**。
 
@@ -36,20 +36,29 @@
 
 ④ 11（All excluding self）：给所有logical processor发送IPI命令，但**不包括自己**。
 
-# Destination Mode域
+# 3. Destination Mode域
 
-这个域使用在**No Shorthand模式**中，提供**查找目标processor的方式**。0为**physical方式**，1为**logical方式**。它们的使用依赖于**LDR（Logical Destination Register**）和**DFR（Destination Format Register**）。我们将在后面进行探讨。
+这个域使用在**No Shorthand模式**中，提供**查找目标processor的方式**。
 
-# Destination Field域
+- 0为**physical方式**，
+- 1为**logical方式**。
+
+它们的使用依赖于**LDR（Logical Destination Register**）和**DFR（Destination Format Register**）。我们将在后面进行探讨。
+
+# 4. Destination Field域
 
 这个域提供**目标processor地址**。我们将在后面的发送IPI消息部分进行探讨。
 
 在ICR的**delivery mode**里增加了**2个交付模式**：**Lowest Priority模式**和**Start Up模式**，**去掉了ExtINT模式**。
 
-# 4 Lowest Priority模式
+# 5. Lowest Priority模式
 
 使用lowest priority交付模式匹配的**目标logical prcessor**或**一组logical processor**运行在**低优先级**下。
 
-# 5 Start Up模式
+# 6. Start Up模式
 
-logical processor可以发送**SIPI（Start\-Up IPI**）消息给**目标logical prcessor**或**一组logical processor**。在MP系统里所有的AP（Application Processor，应用处理器）在完成自己的初始化后，进入wait\-for\-SIPI状态。等待从**BSP（Bootstrap Processor，自举处理器）发送过来的SIPI消息**，然后每个AP处理器**执行自己的配置程序**。
+logical processor可以发送**SIPI（Start\-Up IPI**）消息给**目标logical prcessor**或**一组logical processor**。
+
+在MP系统里所有的AP（Application Processor，应用处理器）在完成自己的初始化后，进入`wait-for-SIPI`状态。
+
+等待从**BSP（Bootstrap Processor，自举处理器）发送过来的SIPI消息**，然后每个AP处理器**执行自己的配置程序**。
