--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -36,7 +36,9 @@ mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 
 # IPI消息对象
 
-**ICR**的**destination shorthand域**设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。在Self、All including self，以及All excluding self目标类型中使用固定的目标对象。
+**ICR**的**destination shorthand域**设置了总的**目标类型**，**只有No Shorthand目标类型**才需要**提供具体的IPI消息发送对象**。
+
+在Self、All including self，以及All excluding self目标类型中使用固定的目标对象。
 
 ## 使用No shorthand目标类型
 
