--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1674,6 +1674,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
         vmx->idt_vectoring_info = 0;
         // vm->exit_reason
         vmx->exit_reason = vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);
+        // 处理mce异常
         if ((u16)vmx->exit_reason == EXIT_REASON_MCE_DURING_VMENTRY)
                 kvm_machine_check();
 
@@ -1683,7 +1684,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
         vmx->loaded_vmcs->launched = 1;
         // 从硬件VMCS中读取中断向量表信息
         vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD);
-        /*处理MCE异常和NMI中断*/
+        /*NMI中断*/
         vmx_recover_nmi_blocking(vmx);
         vmx_complete_interrupts(vmx);
 }
@@ -1850,7 +1851,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         ret
 
         /* VM-Fail.  Out-of-line to avoid a taken Jcc after VM-Exit. */
-        // VM-Fail 直接到这里
+        // VM-Fail 直接到这里, eax寄存器存储返回值
 2:      mov $1, %eax
         jmp 1b
 SYM_FUNC_END(__vmx_vcpu_run)
