--- Auto-Git Commit ---

--- a/Linux/Learning/奔跑吧Linux内核/3. 进程管理/1. 进程的诞生.md
+++ b/Linux/Learning/奔跑吧Linux内核/3. 进程管理/1. 进程的诞生.md
@@ -3,9 +3,9 @@
 
 <!-- code_chunk_output -->
 
-* [1 init进程](#1-init进程)
-* [2 fork](#2-fork)
-* [3 小结](#3-小结)
+- [1 init进程](#1-init进程)
+- [2 fork](#2-fork)
+- [3 小结](#3-小结)
 
 <!-- /code_chunk_output -->
 
@@ -820,7 +820,7 @@ static inline void __set_task_cpu(struct task_struct *p, unsigned int cpu)
 }
 ```
 
-在设置thread\_info\->cpu之前，\_set\_task\_cpu()函数用smp\_wmb()写内存屏障语句来保证之前内容写入完成后才设置thread\_info\->cpu，这里与move\_queued\_task()和task\_rq\_lock()函数相关。
+在设置`thread_info->cpu`之前，`_set_task_cpu()`函数用`smp_wmb()`写内存屏障语句来保证**之前内容写入完成**后才设置thread\_info\->cpu，这里与move\_queued\_task()和task\_rq\_lock()函数相关。
 
 接下来,初始化thread\_info数据结构中的**preempt\_count计数**，为了**支持内核抢占**而引入该字段。当preempt\_count为0时，表示内核**可以被安全地抢占**，大于0 时，则禁止抢占。
 
